use ta4j-core 0.16-SNAPSHOT